--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ and open the template in the editor.
         <title>All About Me</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link type="text/css" rel="stylesheet" href="css/style.css">
+        <link type="text/css" rel="stylesheet" href="css/style.css">     
+        <link type="text/css" rel="stylesheet" href="css/style2.css">
+        
         <link type ="text/css" rel="stylesheet" href="css/bootstrap-theme.css">
         <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
