--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ and open the template in the editor.
         <article>
 
         </article>
-        <!-- SCM Music Player http://scmplayer.net -->
+        <!-- SCM Music Player http://scmplayer.net 
         <script type="text/javascript" src="http://scmplayer.net/script.js" 
                 data-config="{'skin':'skins/cyber/skin.css','volume':72,'autoplay':true,
                 'shuffle':false,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':
@@ -75,6 +75,6 @@ and open the template in the editor.
                 {'title':'Lead Me Home','url':'https://www.youtube.com/watch?v=K53Lf5Jkbjs'},{'title':'Blackbird Song',
                 'url':'https://www.youtube.com/watch?v=06ygjTn6q-c'},{'title':'You Are The Wilderness','url':
         'https://www.youtube.com/watch?v=QjesDIGTmGE'}]}" ></script>
-        <!-- SCM Music Player script end -->
+         SCM Music Player script end -->
     </body>
 </html>
